fixed sizing, spacing and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,19 @@ body {
   font-size: 20.51px;
 }
 
-h1,
+h1 {
+  font-size: 1.8em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 55px;
+  color: #3f4765;
+}
+
 h2,
 h3,
 h4,
 h5 {
+  font-size: 1.61em;
   font-style: normal;
   font-weight: 600;
   line-height: 55px;
@@ -83,7 +91,7 @@ a:hover {
 }
 
 .hero {
-  height: 60em;
+  height: 40em;
   width: 100%;
   background-image: url(/assets/wave1.svg);
 }
@@ -113,13 +121,13 @@ a:hover {
 }
 
 .copyright {
-  font-size: 0.6em;
+  font-size: 0.5em;
   color: #6f758c;
 }
 
 /* HOW IT WORKS PAGE */
 .how-it-works-header {
-  height: 50em;
+  height: 30em;
   width: 100%;
   background-image: url(/assets/wave3.svg);
   background-repeat: no-repeat;
@@ -148,11 +156,19 @@ a:hover {
     color: #6f758c;
   }
 
-  h1,
+  h1 {
+    font-size: 1.36em;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.7em;
+    color: #3f4765;
+  }
+
   h2,
   h3,
   h4,
   h5 {
+    font-size: 1.17em;
     font-style: normal;
     font-weight: 600;
     line-height: 1.7em;
@@ -163,6 +179,11 @@ a:hover {
     font-size: 0.84em;
     line-height: 2em;
     color: #6f758c;
+  }
+
+  .btn-primary {
+    padding: 14px 95px;
+    font-size: 0.97em;
   }
 
   .nav-menu {
@@ -183,6 +204,10 @@ a:hover {
     opacity: 1;
   }
 
+  .nav-link {
+    font-size: 1em;
+  }
+
   .nav-item {
     margin: 1rem 0;
   }
@@ -193,13 +218,13 @@ a:hover {
   }
 
   .hero {
-    height: 29em;
+    height: 24em;
   }
   .work-with-us {
     height: 50em;
   }
 
   .how-it-works-header {
-    height: 20em;
+    height: 15em;
   }
 }
